# SiMpLE

./: CMakeLists.txt  README.md  package.xml
config/: live.yaml  save_map.yaml
launch/: simple.launch.py
src/: ConfigParser.hpp  Map.cpp  Map.hpp  Register.cpp  Register.hpp  Scan.cpp  Scan.hpp  main.cpp  utils.cpp
